[BP] MB-20755: Avoid array index-out-of-bounds in compact move docs

Change-Id: Ia76494dd985683081ec91ed8b7b4cf96421e6289
Reviewed-on: http://review.couchbase.org/67527
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>