src/compaction.cc
@@ -1204,7 +1204,7 @@ fdb_status Compaction::copyDocs(FdbKvsHandle *handle,
         // if array exceeds the threshold, OR
         // there's no next item (hr == HBTRIE_RESULT_FAIL),
         // sort and move the documents in the array
-        if (c > offset_array_max ||
+        if (c >= offset_array_max ||
             (c > 0 && hr != HBTRIE_RESULT_SUCCESS)) {
             // Sort offsets to minimize random accesses.
             qsort(offset_array, c, sizeof(uint64_t), _fdb_cmp_uint64_t);
